syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "gogoproto/gogo.proto";

package storage;

message SignatureIntegration {;
    string id   = 1;
    string name = 2;

    repeated SignatureVerificationConfig signature_verification_configs = 3;
}

message SignatureVerificationConfig {
    string id = 1;

    oneof config {
        CosignPublicKeyVerification cosign_verification = 2;
    }
}

message CosignPublicKeyVerification {
    message PublicKey {
      string name                   = 1;
      string public_keys_base64_enc = 2;
    }
    repeated PublicKey public_keys = 3;
}
